# XueBa

./: .gitignore  Dockerfile  README.md  fly.toml  index.html
.github/workflows/: deploy  deploy.yml
ChengYuJieLong/: .gitignore  CLAUDE.md  README  SETUP.md  check-dict.cjs  debug.cjs  index.html  package-lock.json  package.json  parse-dictionary.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
ChengYuJieLong/src/: App.css  App.tsx  dictionary.ts  types.ts
client/: .gitignore  404.html  CNAME  README.md  gleam.toml  index.html  manifest.toml
client/frontend/: gleam.toml
client/priv/static/: app.min.mjs  app.mjs
client/src/: app.gleam
client/src/frontend/: app.gleam
mobile/XueBa/XueBa/: ContentView.swift  Note.swift  NoteDetailView.swift  NotesListView.swift  XueBaApp.swift
mobile/XueBa/XueBa.xcodeproj/: project.pbxproj
mobile/XueBa/XueBa.xcodeproj/project.xcworkspace/xcuserdata/huyanhhoang.xcuserdatad/: UserInterfaceState.xcuserstate
mobile/XueBa/XueBa.xcodeproj/xcuserdata/huyanhhoang.xcuserdatad/xcschemes/: xcschememanagement.plist
mobile/XueBa/XueBaTests/: XueBaTests.swift
mobile/XueBa/XueBaUITests/: XueBaUITests.swift  XueBaUITestsLaunchTests.swift
server/: Cargo.toml  Dockerfile  requirements.txt
server/src/: main.py  main.rs
xuedu_poc/: .gitignore  README.md  STRUCTURE.md  sample_text.txt  xuedu.py
xuedu_poc/src/: __init__.py  app.py  database.py  llm_parser.py  models.py
xuedu_poc/tests/: __init__.py  demo.py  test_basic.py
